<resources>
    <string name="app_name">Gesture Wand</string>
    <string name="without_login">WITHOUT LOGIN</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="gestures">GESTURES</string>
    <string name="settings">SETTINGS</string>
    <string name="summary">SUMMARY</string>

    <string name="vertical_ellipsis">&#8942;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="learn">LEARN</string>
    <string name="test">TEST</string>
    <string name="name">Name</string>
    <string name="app">App</string>
    <string name="learn_instruction">Press volume-up and volume-down buttons then make gesture and release buttons.</string>
    <string name="save">SAVE</string>
    <string name="gesture_left">%1$d gestures left to go!</string>
    <string name="training_progress_message">Training in progress…\n Actual iteration: %1$d and error: %2$f</string>
    <string name="done">DONE</string>
    <string name="too_fast">Too fast! Try again.</string>
    <string name="summary_message">Hello in GestureWand, app that makes from gestures powerfull tool to control your phone in new way! Please choose what do you want to do in menu or just test me and make your gesture!</string>
    <string name="unexpected_error">Unexpected error!</string>
    <string name="enough_gestures">You have created enough samples. Click SAVE to save gesture!</string>
    <string name="retrain_network">RETRAIN NETWORK</string>
    <string name="clear_db">CLEAR ALL</string>
    <string name="random_test">RANDOM TEST</string>
    <string name="QUIT">EXIT</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_gesture_ask">Do you really want to delete gesture?</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_gesture">Delete gesture</string>
    <string name="settings_message">Use options with caution! Do not change anything until you really know what do you want to do.</string>
    <string name="min_gesture_count">Min gesture count</string>
    <string name="records_count">Records count</string>
    <string name="samples_count">Samples count</string>
    <string name="max_error">Max error</string>
    <string name="clear_gestures">CLEAR GESTURES</string>
    <string name="calibration">CALIBRATION</string>
    <string name="calibration_message">Please put your phone on the table, do not move it and press CALIBRATE. Actual values: %1$f %2$f %3$f</string>
    <string name="calibrate">CALIBRATE</string>
    <string name="logger">LOGGER</string>
    <string name="logger_message">Record gesture to see how does it look like!</string>
    <string name="gesture_plot">Gesture plot</string>
    <string name="acceleration">acceleration</string>
    <string name="samples">samples</string>
    <string name="test_mode_active">Test mode active</string>
    <string name="gesture_test">Gesture test</string>
    <string name="test_gesture_message">I think I found your gesture. Am I right?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="wrong_gesture_message">What a pity! Tell me what was it?</string>
    <string name="recognizability_message">%1$d / %2$d = %3$d</string>
    <string name="action">Action</string>
    <string name="action_param">Action param</string>
    <string name="exit">Exit</string>
    <string name="parameter">Parameter</string>
    <string name="learning">Learning</string>
    <string name="gesture">Gesture</string>
    <string name="gesture_message">I found gesture: %1$s! Do you want to do this: %2$s</string>
</resources>
