<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/linearlayout_divider_small"
    tools:context="pl.chipsoft.gesturewand.fragments.LoggerFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text_big"
        android:text="@string/logger_message" />

    <CheckBox
        android:id="@+id/flChBTestMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_mode_active"
        android:checked="true"/>

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/flPlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ap:title="@string/gesture_plot"
        ap:rangeTitle="@string/acceleration"
        ap:domainTitle="@string/samples"
        ap:lineLabels="left|bottom"
        ap:lineLabelRotationBottom="-45"
        ap:renderMode="use_background_thread"/>

</LinearLayout>
