<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_gesture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/linearlayout_divider_big"
    tools:context="pl.chipsoft.gesturewand.activities.NewGestureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/linearlayout_divider_small">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/angETxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/angSpnAction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/angSpnParam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <EditText
                android:id="@+id/angETxtParam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/parameter"
                android:enabled="false"/>


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/text_big"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_gravity="center"-->
            <!--android:textAlignment="center"-->
            <!--android:text="Gestures: 2/20"/>-->

        <!--<Button-->
            <!--android:id="@+id/angBtnClearGestures"-->
            <!--style="@style/AppTheme.Button"-->
            <!--android:layout_gravity="right"-->
            <!--android:text="@string/clear_gestures" />-->

    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/angTxtInfo"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_big"
        android:text="@string/learn_instruction"/>


    <Button
        android:id="@+id/angBtnSave"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:enabled="false" />

</LinearLayout>
